--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
-<app-navbar></app-navbar>
-<a routerLink="/register">Register</a>
+<header>
+  <h1 class="mat-headline"><span class="headline"></span></h1>
+  <h2 class="mat-h2">Front-end
+    <small class="animated fadeInLeft">developer</small>
+  </h2>
+</header>
+
+<app-terminal show-gt-sm></app-terminal>
+<div class="cv-button-wrapper">
+  <button mat-raised-button color="primary"  class="animated fadeInLeft">Download CV</button>
+</div>
+<app-footer></app-footer>
