--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,12 @@
 <mat-toolbar>
-  <button mat-icon-button><mat-icon><img src="../assets/github.svg"></mat-icon></button>
+  <a href="https://github.com/senatorl" target="_blank">
+    <button mat-icon-button>
+      <mat-icon><img src="../assets/github.svg"></mat-icon>
+    </button>
+  </a>
   <a href="https://www.linkedin.com/in/%C5%82ukasz-senator-512681b9/" target="_blank">
-    <button mat-icon-button><mat-icon><img src="../assets/linkedin.svg"></mat-icon></button>
+    <button mat-icon-button>
+      <mat-icon><img src="../assets/linkedin.svg"></mat-icon>
+    </button>
   </a>
 </mat-toolbar>
