Cli update, reducer refactored, some minor refactors here and there

--- a/src/app/terminal/components/terminal-about/terminal-about.component.html
+++ b/src/app/terminal/components/terminal-about/terminal-about.component.html
@@ -68,6 +68,6 @@
       ,@#@@@@@@@@#@@@@@@`,,;;;;;:;+@@@@@@@@@@@@@@@@@@@@@@@@@@'.``
     </div>
 <hr>
-Hi, my name is Lukas, I'm 26 years old front-end developer based in Warsaw, Poland. I like new technologies
-and well crafted user's experience. I used to be a webdesigner so I've got a good eye for details.
+Hi, my name is Lukas, I'm 27 years old front-end developer based in Warsaw, Poland. I like new technologies
+and well crafted user's experience. I used to be a webdesigner so I've got a good eye for details. I can assure you, I look a little less creepy in real life than converted to ASCII.
 </pre>
